--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,10 +1,19 @@
+#FROM: especifica de onde quero basear minha imagem
 FROM mysql:debian
 
+#RUN: especifica comandos rodar para inicializar o container
 RUN apt-get -y update
 RUN apt-get -y install git
 
+#ENV: Insere variáveis de ambiente
 ENV MYSQL_DATABASE Xastre
+ENV MYSQL_ROOT_PASSWORD 1234
 
-WORKDIR /docker-entrypoint-initdb.d/
+#WORDIR: Acessa um diretório específico
+WORKDIR /root
 
 RUN git clone https://github.com/gabrielfcisco/Trabalho_RDBMS.git
+
+WORKDIR /root/Trabalho_RDBMS
+
+RUN mv -i Create_Tables.sql /docker-entrypoint-initdb.d/
